# PIP_Prompt

./: PIP_prompt.py  README.md  __init__.py  pyproject.toml  新版提示词.txt
prompt/: Anime.json  Camera.json  Character.json  Clothing.json  Color.json  Composition.json  Decoration.json  Environment.json  Face.json  Hair.json  Number.json  Occupation.json  Style.json
